Extract Text from Images

--- a/OCR_Tesseract.ipynb
+++ b/OCR_Tesseract.ipynb
@@ -6,7 +6,7 @@
       "name": "OCR-Tesseract.ipynb",
       "provenance": [],
       "collapsed_sections": [],
-      "authorship_tag": "ABX9TyPTvdiDpxgyXX8XYHVzNF46",
+      "authorship_tag": "ABX9TyPIxi4bRCBZ1idbfgGKC0c4",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -27,6 +27,15 @@
       },
       "source": [
         "<a href=\"https://colab.research.google.com/github/onkar-99/OCR-for-Pan-Card-Text-Recognition-using-Tesseract/blob/main/OCR_Tesseract.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "P2p2XcoDp9nB"
+      },
+      "source": [
+        "#Install Tesseract "
       ]
     },
     {
@@ -98,6 +107,15 @@
       ]
     },
     {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "BI0fjhnLqD7j"
+      },
+      "source": [
+        "#Import Packages"
+      ]
+    },
+    {
       "cell_type": "code",
       "metadata": {
         "id": "BgdMyKZnb84t"
@@ -114,19 +132,39 @@
       "outputs": []
     },
     {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "peHVlixjqIkE"
+      },
+      "source": [
+        "Extract Text and Coordinates using Tesseract"
+      ]
+    },
+    {
       "cell_type": "code",
       "metadata": {
         "id": "UkZ0E8RF6lG2"
       },
       "source": [
-        "def extract_text_from_image_file(file_n, language):\n",
-        "    return pytesseract.image_to_string(file_n, lang=language, config='--psm 11')\n",
-        "\n",
         "def extract_data_from_image_file(file_n):\n",
         "    return pytesseract.image_to_data(file_n, output_type='dict')"
       ],
       "execution_count": 3,
       "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "4zIfrgN5qSWR"
+      },
+      "source": [
+        "#Main Function including following features:\n",
+        "\n",
+        "##1. Preprocessing (Grayscale,Rotation)\n",
+        "##2. Regex to extract DOB and Pan Card Number\n",
+        "##3. Draw bounding box around the extracted data in image. \n",
+        "##4. Plot the output image."
+      ]
     },
     {
       "cell_type": "code",
@@ -160,6 +198,16 @@
       ],
       "execution_count": 8,
       "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "wlwWiwdOrX7C"
+      },
+      "source": [
+        "#Function calls for each pancard image. \n",
+        "## Note: The boolean variable is used for specifying if rotation is required or not."
+      ]
     },
     {
       "cell_type": "code",
@@ -280,17 +328,6 @@
           }
         }
       ]
-    },
-    {
-      "cell_type": "code",
-      "metadata": {
-        "id": "Widg0U_vk_zK"
-      },
-      "source": [
-        ""
-      ],
-      "execution_count": null,
-      "outputs": []
     }
   ]
 }
