--- a/OCR_Tesseract.ipynb
+++ b/OCR_Tesseract.ipynb
@@ -175,6 +175,7 @@
         "def main(filename,rot):\n",
         "    img=cv2.imread(filename)\n",
         "    if rot:\n",
+        "        #Enter your Rotation angle below\n"
         "        img = rotate(img, 270)\n",
         "    gray = cv2.cvtColor(img, cv2.COLOR_BGR2GRAY)\n",
         "    #extract_text_from_image_file(gray, \"eng\")\n",
